methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:4: error: '(' expected but identifier found.
    if isFacingTrail() {forward()}
       ^SlugHunting:9: error: illegal start of simple expression
    }
    ^